--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         Meng Luo, Hao Fei*, Bobo Li, <strong>Shengqiong Wu</strong>, Qian Liu, Soujanya Poria, Erik Cambria, Mong-Li Lee, Wynne Hsu.&nbsp&nbsp<em>PanoSent: A Panoptic Sextuple Extraction Benchmark for Multimodal Conversational Aspect-based Sentiment Analysis</em>. In Proceedings of <strong>ACM MM</strong>. 2024.&nbsp&nbsp (Oral).<a href="https://panosent.github.io/">[Code]</a><a href="https://www.arxiv.org/pdf/2408.09481">[pdf]</a>
                       </li>
                       <li>
-                        <strong>Shengqiong Wu</strong>, Hao Fei, Leigang Qu, Wei Ji, Tat-Seng Chua.&nbsp&nbsp<em>NExT-GPT: Any-to-Any Multimodal Large Language Model</em>. In Proceedings of <strong>ICML</strong>. 2024.&nbsp&nbsp (Oral) <a href="https://next-gpt.github.io/">[Code | 3.4k 🌟]</a><a href="https://arxiv.org/pdf/2309.05519.pdf">[pdf]</a>
+                        <strong>Shengqiong Wu</strong>, Hao Fei, Leigang Qu, Wei Ji, Tat-Seng Chua.&nbsp&nbsp<em>NExT-GPT: Any-to-Any Multimodal Large Language Model</em>. In Proceedings of <strong>ICML</strong>. 2024.&nbsp&nbsp (Oral) <a href="https://next-gpt.github.io/">[Code | 3.5k 🌟]</a><a href="https://arxiv.org/pdf/2309.05519.pdf">[pdf]</a>
                       </li>
                       <li>
                         Hao Fei, <strong>Shengqiong Wu</strong>, Wei Ji, Hanwang Zhang, Meishan Zhang, Mong-Li Lee, Wynne Hsu.&nbsp&nbsp<em>Video-of-Thought: Step-by-Step Video Reasoning from Perception to Cognition</em>. In Proceedings of <strong>ICML</strong>. 2024.&nbsp&nbsp (Oral) <a href="https://github.com/scofield7419/Video-of-Thought">[Code]</a><a href="https://haofei.vip/downloads/papers/VoT_2024.pdf">[pdf]</a> 
@@ -453,9 +453,9 @@
                     <li>
                       Hao Fei, <strong>Shengqiong Wu</strong>, Jingye Li, Bobo Li, Fei Li, Libo Qin, Meishan Zhang, Min Zhang, Tat-Seng Chua.&nbsp&nbsp<em>LasUIE: Unifying information extraction with latent adaptive structure-aware generative language model</em>. In Proceedings of <strong>NeurIPS</strong>. 2022.&nbsp&nbsp(long, poster) <a href="https://github.com/ChocoWu/LasUIE">[Code]</a><a href="https://proceedings.neurips.cc/paper_files/paper/2022/file/63943ee9fe347f3d95892cf87d9a42e6-Paper-Conference.pdf">[pdf]</a>
                     </li>
-                    <li>
+                    <!-- <li>
                       Shunjie Chen, Xiaochuan Shi, Jingye Li, <strong>Shengqiong Wu</strong>, Hao Fei, Fei Li, Donghong Ji.&nbsp&nbsp<em>Joint Alignment of Multi-Task Feature and Label Spaces for Emotion Cause Pair Extraction</em>. In Proceedings of <strong>COLING</strong>. 2022.&nbsp&nbsp(long, poster) <a href="https://github.com/csj199813/A2Net_ECPE">[Code]</a><a href="https://arxiv.org/abs/2209.04112">[pdf]</a>
-                    </li>
+                    </li> -->
                     <li>
                       Hu Cao, Jingye Li, Fangfang Su, Fei Li, Hao Fei, <strong>Shengqiong Wu</strong>, Bobo Li, Liang Zhao and Donghong Ji.&nbsp&nbsp<em>OneEE: A One-Stage Framework for Fast Overlapping and Nested Event Extraction</em>. In Proceedings of <strong>COLING</strong>. 2022.&nbsp&nbsp(long, oral) <a href="https://github.com/Cao-Hu/OneEE">[Code]</a><a href="https://arxiv.org/abs/2209.02693">[pdf]</a>
                     </li>
@@ -760,7 +760,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-auto">
-        <a href='https://clustrmaps.com/site/1c516'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=d88d39&w=a&t=n&d=aNjse364HlkoN5Md08SgBTn96q6FoB2xAvmbvYQSDJQ&co=ffffff'/></a>
+        <!-- <a href='https://clustrmaps.com/site/1c516'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=d88d39&w=a&t=n&d=aNjse364HlkoN5Md08SgBTn96q6FoB2xAvmbvYQSDJQ&co=ffffff'/></a> -->
+        <a href='https://clustrmaps.com/site/1c516'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=d88d39&w=a&t=tt&d=aNjse364HlkoN5Md08SgBTn96q6FoB2xAvmbvYQSDJQ&co=ffffff'/></a>
       </div>
     </div>
   </div>
