--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
               <td width="100%" valign="middle">
                 <li> <span style="color: red;">[NEW!-2025/03]</span> We release the first survey on <a href="https://github.com/yaotingwangofficial/Awesome-MCoT">MM-CoT</a> reasoning, welcom to participate and star✨✨. </li>
                 <li> <span style="color: red;">[NEW!-2025/03]</span> 🐾 I will be a <em>volunteer</em> at ICLR 2025. One paper (<a href="https://sqwu.top/SeTok-web/">Setok</a>) is accpted by ICLR-25. Looking forward to meet you. </li>
+                <li> <span style="color: red;">[NEW!-2024/02]</span> 🥳🥳🥳 My two full papers are accpted in CVPR 2025: <a href="https://sqwu.top/USG/">Universal Scene Graph Generation</a>  and  <a href="https://sqwu.top/PSG-4D-LLM/">4D Scene Graph Generation</a> .</li>
                 <li> <span style="color: red;">[NEW!-2025/02]</span> Welcome to <a href="https://ssnlp-website.github.io/ssnlp25/">SSNLP-25</a>, Free Registration!!!</li>
                 <li> <span style="color: red;">[NEW!-2024/12]</span> 🥳 I maintain a github repo focusing on  <a href="https://github.com/ChocoWu/Awesome-Scene-Graph-Generation">Awesome-Scene-Graph-Generation-and-Application</a>. Welcome to check it out, contribute, and share any resources or insights related to scene graph generation!</li>
                 <li> <span style="color: red;">[NEW!-2024/12]</span> <a href="https://arxiv.org/abs/2412.11124">One paper</a> focusing on mitigating hallucination in MLLMs is accepted by AAAI-25!</li>
@@ -381,6 +382,12 @@
                     <ul>
                       <li>
                         Yaoting Wang, <strong>Shengqiong Wu</strong>, Yuechen Zhang, William Wang, Ziwei Liu, Jiebo Luo, Hao Fei.&nbsp&nbsp<em>Multimodal Chain-of-Thought Reasoning: A Comprehensive Survey</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://github.com/yaotingwangofficial/Awesome-MCoT">[Code]</a><a href="https://arxiv.org/abs/2503.12605">[pdf]</a>
+                      </li>
+                      <li>
+                        <strong>Shengqiong Wu</strong>, Hao Fei, Tat-Seng Chua, Shuicheng Yan.&nbsp&nbsp<em>Universal Scene Graph Generation</em>. <strong>CVPR</strong>. 2025.&nbsp&nbsp<a href="https://sqwu.top/USG/">[Code]</a><a href="https://arxiv.org/abs/2503.15005">[pdf]</a>
+                      </li>
+                      <li>
+                        <strong>Shengqiong Wu</strong>, Hao Fei, Jingkang Yang, Xiangtai Li, Juncheng Li, Hanwang Zhang, Tat-seng Chua.&nbsp&nbsp<em>Learning 4D Panoptic Scene Graph Generation from Rich 2D Visual Scene</em>. <strong>CVPR</strong>. 2025.&nbsp&nbsp<a href="https://sqwu.top/PSG-4D-LLM/">[Code]</a><a href="https://arxiv.org/abs/2503.15019">[pdf]</a>
                       </li>
                       <li>
                         <strong>Shengqiong Wu</strong>, Hao Fei, Xiangtai Li, Jiayi Ji, Hanwang Zhang, Tat-Seng Chua, Shuicheng Yan.&nbsp&nbsp<em>Towards Semantic Equivalence of Tokenization in Multimodal LLM</em>. <strong>ICLR</strong>. 2025.&nbsp&nbsp<a href="https://chocowu.github.io/SeTok-web/">[Code]</a><a href="https://arxiv.org/pdf/2406.05127">[pdf]</a>
