--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                               NExT++ Research Center<br>
                               National University of Singapore<br>
                               <br>
-                              <a href="mailto:sqwu@u.nus.edu">
+                              <a href="mailto:swu@u.nus.edu">
                                 <i class="fa fa-envelope" aria-hidden="true" style="font-size: 24px;"></i>
                               </a>
                               <a href="https://scholar.google.com/citations?user=RJJLKR0AAAAJ">
