--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 <td width="70%">
                   <a href="https://sqwu.top/Any2Cap/"><b>Any2Caption</b></a>: 
                     A SoTA framework for <span style="text-decoration: underline; font-weight: bold;">controllable video generation from any condition</span> by being the first to leverage MLLMs to interpret diverse inputs into dense, structured captions. <br>
-                    <a href="https://arxiv.org/abs/2503.24379">[PDF]</a> <a href="https://sqwu.top/Any2Cap/">[Github]</a> <a href="https://huggingface.co/papers/2503.24379">[Huggingface]</a><br> 
+                    <a href="https://arxiv.org/abs/2503.24379">[PDF]</a> <a href="https://sqwu.top/Any2Cap/">[Github]</a> <a href="https://huggingface.co/papers/2503.24379">[Huggingface]</a>  <a href="https://www.youtube.com/watch?v=-abPVBfRNMU">[Video]</a> <br> 
                     (<i>Preprint, 2025</i>)
                 </td>
 
