--- a/index.html
+++ b/index.html
@@ -333,9 +333,12 @@
                   <a href="https://next-gpt.github.io/"><b>NExT-GPT</b></a>: 
                     The first <span style="text-decoration: underline; font-weight: bold;">unified any-to-any multimodal LLM</span>, capable of understanding and generating across any modality or combination of modalities (e.g., text, image, video, audio). <br>
                     <a href="https://arxiv.org/pdf/2309.05519.pdf">[PDF]</a> <a href="https://github.com/NExT-GPT/NExT-GPT">[Github]</a> <a href="https://huggingface.co/papers/2309.05519">[Huggingface]</a> <a href="https://www.youtube.com/watch?v=aqw2SCWeWD0">[Video]</a> <br>
-                    (<i>ICML'24 Oral</i>, <i>3.5K GitHub stars</i>, <i>selected as a Most Influential Paper by Paper Digest</i>, <i>WAIC Youth Outstanding Paper Award</i>, <i>585 citations</i>)
+                    (<i>ICML'24 Oral</i>, <i>selected as a Most Influential Paper by Paper Digest</i>, <i>WAIC Youth Outstanding Paper Award</i>, <img src="https://img.shields.io/github/stars/NExT-GPT/NExT-GPT?style=social" alt="">, <a href="https://scholar.google.com/scholar?oi=bibs&hl=zh-CN&cites=174615942206434624&as_sdt=5">
+                      <img src="https://img.shields.io/badge/citations-585-9cf?logo=Google%20Scholar&labelColor=f6f6f6&style=flat">
+                    </a>)
+                    <!-- <a href="https://scholar.google.com/scholar?oi=bibs&hl=zh-CN&cites=174615942206434624&as_sdt=5"><img src="https://img.shields.io/endpoint?logo=Google%20Scholar&amp;585&amp;labelColor=f6f6f6&amp;color=9cf&amp;style=flat&amp;label=citations"></a>) -->
                 </td>
-              </tr>
+              </tr> 
               <tr>  
                 <td width="30%">
                     <video controls autoplay muted loop width="100%" height="100%">
