--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
           <tr>
             <td width="100%" valign="middle">
               <ol style="list-style-type: none;  padding-left: 0; margin-left: 0; margin-top: 20px;">
+                <li> <b>[2025/03]</b> &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://mp.weixin.qq.com/s/OitEa8lLHVIajsS3zo-uHw">Towards Semantic Equivalence of Tokenization in Multimodal LLM</a>. NICE.</li>
                 <li> <b>[2024/01]</b> &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://event.baai.ac.cn/activities/744">The Path to AGI: Achieving Modality Unification with NExT-GPT</a>. Qingyuan Talk.</li>
                 <li> <b>[2023/12]</b> &nbsp&nbsp&nbsp&nbsp&nbsp <a href="https://zhidx.com/p/406693.html">NExT-GPT: Any-to-Any Multimodal LLM</a>.  AI New Youth.</li>
                 <li> <b>[2022/12]</b> &nbsp&nbsp&nbsp&nbsp&nbsp Deep Learning based Natural Language Processing: A Survey and Outlook.  Jianghan University, China.</li>
