--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     The first <span style="text-decoration: underline; font-weight: bold;">unified any-to-any multimodal LLM</span>, capable of understanding and generating across any modality or combination of modalities (e.g., text, image, video, audio). <br>
                     <a href="https://arxiv.org/pdf/2309.05519.pdf">[PDF]</a> <a href="https://github.com/NExT-GPT/NExT-GPT">[Github]</a> <a href="https://huggingface.co/papers/2309.05519">[Huggingface]</a> <a href="https://www.youtube.com/watch?v=aqw2SCWeWD0">[Video]</a> <br>
                     (<i>ICML'24 Oral</i>, <i>selected as a Most Influential Paper by Paper Digest</i>, <i>WAIC Youth Outstanding Paper Award</i>, <img src="https://img.shields.io/github/stars/NExT-GPT/NExT-GPT?style=social" alt="">, <a href="https://scholar.google.com/scholar?oi=bibs&hl=zh-CN&cites=174615942206434624&as_sdt=5">
-                      <img src="https://img.shields.io/badge/citations-627-9cf?logo=Google%20Scholar&labelColor=f6f6f6&style=flat">
+                      <img src="https://img.shields.io/badge/citations-628-9cf?logo=Google%20Scholar&labelColor=f6f6f6&style=flat">
                     </a>)
                     <!-- <a href="https://scholar.google.com/scholar?oi=bibs&hl=zh-CN&cites=174615942206434624&as_sdt=5"><img src="https://img.shields.io/endpoint?logo=Google%20Scholar&amp;585&amp;labelColor=f6f6f6&amp;color=9cf&amp;style=flat&amp;label=citations"></a>) -->
                 </td>
@@ -406,33 +406,35 @@
             <div class="section_title">
               <h2 class="title">🔥NEWs🔥</h2>
             </div>
-          <!-- NEWs -->
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(247, 248, 249);">
-            <tr>
-              <td width="100%" valign="middle">
-                <li> <span style="color: red;">[NEW!-2025/05]</span> 🥳 ICML'25 Spotlight paper: <a href="https://generalist.top/"> Path to Multimodal Generalist: General-Level and General-Bench </a>. <b>A New Evaluation Paradigm</b> for multimodal generalists. </li>
-                <li> <span style="color: red;">[NEW!-2025/03]</span> We release the first survey on <a href="https://github.com/yaotingwangofficial/Awesome-MCoT">MM-CoT</a> reasoning, welcom to participate and star✨✨. </li>
-                <li> <span style="color: red;">[NEW!-2025/03]</span> 🐾 I will be a <em>volunteer</em> at ICLR 2025. One paper (<a href="https://sqwu.top/SeTok-web/">Setok</a>) is accpted by ICLR-25. Looking forward to meet you. </li>
-                <li> <span style="color: red;">[NEW!-2024/02]</span> 🥳🥳🥳 My two full papers are accpted in CVPR 2025: <a href="https://sqwu.top/USG/">Universal Scene Graph Generation</a>  and  <a href="https://sqwu.top/PSG-4D-LLM/">4D Scene Graph Generation</a> .</li>
-                <li> <span style="color: red;">[NEW!-2025/02]</span> Welcome to <a href="https://ssnlp-website.github.io/ssnlp25/">SSNLP-25</a>, Free Registration!!!</li>
-                <li> <span style="color: red;">[NEW!-2024/12]</span> 🥳 I maintain a github repo focusing on  <a href="https://github.com/ChocoWu/Awesome-Scene-Graph-Generation">Awesome-Scene-Graph-Generation-and-Application</a>. Welcome to check it out, contribute, and share any resources or insights related to scene graph generation!</li>
-                <li> <span style="color: red;">[NEW!-2024/12]</span> <a href="https://arxiv.org/abs/2412.11124">One paper</a> focusing on mitigating hallucination in MLLMs is accepted by AAAI-25!</li>
-                <li> <span style="color: red;">[NEW!-2024/08]</span> 🐾I'm excited to have the opportunity to be a <em>volunteer</em> at ACL 2024. Looking forward to being part of it!</li>
-                <li> <span style="color: red;">[NEW!-2024/08]</span> I have tried to build <a href="https://aistudio.baidu.com/projectdetail/8168280">NExT-GPT</a> in <a href="https://www.paddlepaddle.org.cn/">PaddlePaddle</a>, <a href="https://github.com/PaddlePaddle/PaddleNLP">PaddleNLP</a> and <a href="https://github.com/PaddlePaddle/PaddleMIX/tree/release/2.0/ppdiffusers">PPDiffusers</a>. Still working on it. 🤔🤔</li>
-                <li> <span style="color: red;">[NEW!-2024/05]</span> Congratulations! 🥳🥳🥳, two full papers are accpted in ICML-24, <a href="">NExT-GPT</a>  and  <a href="">Video-of-Thought</a> .</li>
-                <li> <span style="color: red;">[NEW!-2024/04]</span> We release Vitron (<a href="https://vitron-llm.github.io/">Demo</a>, <a href="http://haofei.vip/downloads/papers/Skywork_Vitron_2024.pdf">Paper</a> , <a href="https://github.com/SkyworkAI/Vitron">Code</a>), a universal pixel-level vision LLM designed for understanding, generating, segmenting, editing of both image and video. 🌟🌟</li>
-                <li> <span style="color: red;">[NEW!-2024/02]</span> One full paper is accepted by CVPR-24 about <a href="https://haofei.vip/Dysen-VDM/">Text-to-Video Generation</a>. Congrats to all my co-authors. </li>
-                <li> <span style="color: red;">[NEW!-2024/01]</span> I honor Baidu Scholarship (10 people worldwide). 🥳🥳🥳 </li>
-                <li> <span style="color: red;">[NEW!-2023/12]</span> I have successfully passed my Rearcsh-based QE, I am now a Ph.D. Candidate. 🥳🥳🥳  </li>
-                <li> <span style="color: red;">[NEW!-2023/11]</span> I'll join <a href="">Kunlun 2050 Research</a>  as a research intern, advised by <a href="https://yanshuicheng.info/">Prof. Yan</a>. 😆 </li>
-                <li> <span style="color: red;">[NEW!-2023/10]</span> We build <a href="https://next-gpt.github.io/">NExT-GPT</a>, a general-purpose any-to-any MLLM. 🌟 </li>
-                <li> <span style="color: red;">[NEW!-2023/09]</span> One full paper is accepted in <a href="https://neurips.cc/Conferences/2023">NeurIPS-23</a>, about <a href="https://openreview.net/pdf?id=hSTaTBIUCj">Intricate Text-to-image Generation</a>  based on Scene Graph.</li>
-                <li> <span style="color: red;">[NEW!-2023/07]</span> One full paper is accepted in <a href="https://www.acmmm2023.org/">ACM MM-23</a>, about <a href="https://arxiv.org/pdf/2308.05095.pdf">High-faithful Text-to-image Generation</a> enhanced with layout planning from LLM.</li>
-                <li> <span style="color: red;">[NEW!-2023/05]</span> Two full papers is accepted in <a href='https://2023.aclweb.org/'>ACL-23</a>, about <a href='https://aclanthology.org/2023.acl-long.823.pdf'>Multimodal Relation Extraction</a> and <a href='https://aclanthology.org/2023.acl-long.146.pdf'>Image Captioning.</a></li>
-                <li> <span style="color: red;">[NEW!-2022/07]</span> I'm heading to <a href="https://www.comp.nus.edu.sg/">SoC NUS</a> to pursue my PhD—a new journey and fresh challenges await! 🙃</a></li>
-              </td>
-            </tr>
-          </table>
+            <!-- NEWs -->
+            <div style="height:300px; overflow-y:scroll">
+              <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(247, 248, 249);">
+                <tr>
+                  <td width="100%" valign="middle">
+                    <li> <span style="color: red;">[NEW!-2025/05]</span> 🥳 ICML'25 Spotlight paper: <a href="https://generalist.top/"> Path to Multimodal Generalist: General-Level and General-Bench </a>. <b>A New Evaluation Paradigm</b> for multimodal generalists. </li>
+                    <li> <span style="color: red;">[NEW!-2025/03]</span> We release the first survey on <a href="https://github.com/yaotingwangofficial/Awesome-MCoT">MM-CoT</a> reasoning, welcom to participate and star✨✨. </li>
+                    <li> <span style="color: red;">[NEW!-2025/03]</span> 🐾 I will be a <em>volunteer</em> at ICLR 2025. One paper (<a href="https://sqwu.top/SeTok-web/">Setok</a>) is accpted by ICLR-25. Looking forward to meet you. </li>
+                    <li> <span style="color: red;">[NEW!-2024/02]</span> 🥳🥳🥳 My two full papers are accpted in CVPR 2025: <a href="https://sqwu.top/USG/">Universal Scene Graph Generation</a>  and  <a href="https://sqwu.top/PSG-4D-LLM/">4D Scene Graph Generation</a> .</li>
+                    <li> <span style="color: red;">[NEW!-2025/02]</span> Welcome to <a href="https://ssnlp-website.github.io/ssnlp25/">SSNLP-25</a>, Free Registration!!!</li>
+                    <li> <span style="color: red;">[NEW!-2024/12]</span> 🥳 I maintain a github repo focusing on  <a href="https://github.com/ChocoWu/Awesome-Scene-Graph-Generation">Awesome-Scene-Graph-Generation-and-Application</a>. Welcome to check it out, contribute, and share any resources or insights related to scene graph generation!</li>
+                    <li> <span style="color: red;">[NEW!-2024/12]</span> <a href="https://arxiv.org/abs/2412.11124">One paper</a> focusing on mitigating hallucination in MLLMs is accepted by AAAI-25!</li>
+                    <li> <span style="color: red;">[NEW!-2024/08]</span> 🐾I'm excited to have the opportunity to be a <em>volunteer</em> at ACL 2024. Looking forward to being part of it!</li>
+                    <li> <span style="color: red;">[NEW!-2024/08]</span> I have tried to build <a href="https://aistudio.baidu.com/projectdetail/8168280">NExT-GPT</a> in <a href="https://www.paddlepaddle.org.cn/">PaddlePaddle</a>, <a href="https://github.com/PaddlePaddle/PaddleNLP">PaddleNLP</a> and <a href="https://github.com/PaddlePaddle/PaddleMIX/tree/release/2.0/ppdiffusers">PPDiffusers</a>. Still working on it. 🤔🤔</li>
+                    <li> <span style="color: red;">[NEW!-2024/05]</span> Congratulations! 🥳🥳🥳, two full papers are accpted in ICML-24, <a href="">NExT-GPT</a>  and  <a href="">Video-of-Thought</a> .</li>
+                    <li> <span style="color: red;">[NEW!-2024/04]</span> We release Vitron (<a href="https://vitron-llm.github.io/">Demo</a>, <a href="http://haofei.vip/downloads/papers/Skywork_Vitron_2024.pdf">Paper</a> , <a href="https://github.com/SkyworkAI/Vitron">Code</a>), a universal pixel-level vision LLM designed for understanding, generating, segmenting, editing of both image and video. 🌟🌟</li>
+                    <li> <span style="color: red;">[NEW!-2024/02]</span> One full paper is accepted by CVPR-24 about <a href="https://haofei.vip/Dysen-VDM/">Text-to-Video Generation</a>. Congrats to all my co-authors. </li>
+                    <li> <span style="color: red;">[NEW!-2024/01]</span> I honor Baidu Scholarship (10 people worldwide). 🥳🥳🥳 </li>
+                    <li> <span style="color: red;">[NEW!-2023/12]</span> I have successfully passed my Rearcsh-based QE, I am now a Ph.D. Candidate. 🥳🥳🥳  </li>
+                    <li> <span style="color: red;">[NEW!-2023/11]</span> I'll join <a href="">Kunlun 2050 Research</a>  as a research intern, advised by <a href="https://yanshuicheng.info/">Prof. Yan</a>. 😆 </li>
+                    <li> <span style="color: red;">[NEW!-2023/10]</span> We build <a href="https://next-gpt.github.io/">NExT-GPT</a>, a general-purpose any-to-any MLLM. 🌟 </li>
+                    <li> <span style="color: red;">[NEW!-2023/09]</span> One full paper is accepted in <a href="https://neurips.cc/Conferences/2023">NeurIPS-23</a>, about <a href="https://openreview.net/pdf?id=hSTaTBIUCj">Intricate Text-to-image Generation</a>  based on Scene Graph.</li>
+                    <li> <span style="color: red;">[NEW!-2023/07]</span> One full paper is accepted in <a href="https://www.acmmm2023.org/">ACM MM-23</a>, about <a href="https://arxiv.org/pdf/2308.05095.pdf">High-faithful Text-to-image Generation</a> enhanced with layout planning from LLM.</li>
+                    <li> <span style="color: red;">[NEW!-2023/05]</span> Two full papers is accepted in <a href='https://2023.aclweb.org/'>ACL-23</a>, about <a href='https://aclanthology.org/2023.acl-long.823.pdf'>Multimodal Relation Extraction</a> and <a href='https://aclanthology.org/2023.acl-long.146.pdf'>Image Captioning.</a></li>
+                    <li> <span style="color: red;">[NEW!-2022/07]</span> I'm heading to <a href="https://www.comp.nus.edu.sg/">SoC NUS</a> to pursue my PhD—a new journey and fresh challenges await! 🙃</a></li>
+                  </td>
+                </tr>
+              </table>
+            </div>
           </div>
       </div>
   </div>
