--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                   <a class="nav-link js-scroll-trigger" href="#internships">Internships</a>
               </li>
               <li class="nav-item">  
-                  <a class="nav-link js-scroll-trigger" href="#awards">Honors and Awards</a>
+                  <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#talks">Talks</a>
@@ -316,9 +316,10 @@
             <p>I am currently a third-year Ph.D. student at <a href="https://www.nextcenter.org/">NExT++</a> Research Center, advised by Prof. <a href="https://www.chuatatseng.com/">Tat-Seng Chua</a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I obtained my M.S. and Bachelor degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
             </p>
             <p>
-              My research revolves around <strong>Multimodal Understanding</strong> and <strong>Multimodal Generation</strong>, with a major focus on <strong>Multimodal Large Language Models</strong> and <strong>Scene Graph Modeling</strong>.
+              My research revolves around <strong>Large Vision-Language Foundation Models</strong>, with a specific focus on <strong>advancement</strong>, <strong>controllabilitity</strong>, <strong>evaluability</strong>, <strong>reliable and robuts reasoning</strong>.
               Also, certain part of my intearest has been paid on Natural Language Processing.
             </p> 
+            <p>I welcome collaboration opportunities. Feel free to reach out if you are interested in my research.</p>
             
             <span style="font-family:Papyrus, Fantasy , sans-serif; font-size: medium; margin-bottom: 10px; color: rgb(179,81,1);"><b>Some of my representive work:</b></span>
 
@@ -326,7 +327,7 @@
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(255, 255, 255);">
               <tr>
                 <td width="30%">
-                  <video controls autoplay muted loop width="100%" height="100%">
+                  <video controls autoplay muted loop width="100%" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
                     <source src="images/nextgpt.mp4" type="video/mp4">
                 </td>
                 <td width="70%">
@@ -334,14 +335,14 @@
                     The first <span style="text-decoration: underline; font-weight: bold;">unified any-to-any multimodal LLM</span>, capable of understanding and generating across any modality or combination of modalities (e.g., text, image, video, audio). <br>
                     <a href="https://arxiv.org/pdf/2309.05519.pdf">[PDF]</a> <a href="https://github.com/NExT-GPT/NExT-GPT">[Github]</a> <a href="https://huggingface.co/papers/2309.05519">[Huggingface]</a> <a href="https://www.youtube.com/watch?v=aqw2SCWeWD0">[Video]</a> <br>
                     (<i>ICML'24 Oral</i>, <i>selected as a Most Influential Paper by Paper Digest</i>, <i>WAIC Youth Outstanding Paper Award</i>, <img src="https://img.shields.io/github/stars/NExT-GPT/NExT-GPT?style=social" alt="">, <a href="https://scholar.google.com/scholar?oi=bibs&hl=zh-CN&cites=174615942206434624&as_sdt=5">
-                      <img src="https://img.shields.io/badge/citations-628-9cf?logo=Google%20Scholar&labelColor=f6f6f6&style=flat">
+                      <img src="https://img.shields.io/badge/citations-641-9cf?logo=Google%20Scholar&labelColor=f6f6f6&style=flat">
                     </a>)
                     <!-- <a href="https://scholar.google.com/scholar?oi=bibs&hl=zh-CN&cites=174615942206434624&as_sdt=5"><img src="https://img.shields.io/endpoint?logo=Google%20Scholar&amp;585&amp;labelColor=f6f6f6&amp;color=9cf&amp;style=flat&amp;label=citations"></a>) -->
                 </td>
               </tr> 
               <tr>  
                 <td width="30%">
-                    <video controls autoplay muted loop width="100%" height="100%">
+                    <video controls autoplay muted loop width="100%" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
                       <source src="images/any2caption.mp4" type="video/mp4">
                 </td>
                 <td width="70%">
@@ -354,7 +355,7 @@
               </tr>
               <tr> 
                 <td width="30%">
-                  <img src="images/setok.jpeg" width="100%" height="100%">
+                  <img src="images/setok.jpeg" width="100%" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
                 </td>
                 <td width="70%">
                   <a href="https://sqwu.top/SeTok-web/"><b>Setok</b></a>:
@@ -365,7 +366,7 @@
               </tr>
               <tr> 
                 <td width="30%">
-                  <img src="images/usg.png" width="100%" height="100%">
+                  <img src="images/usg.png" width="100%" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
                 </td>
                 <td width="70%">
                   <a href="https://sqwu.top/USG/"><b>USG</b></a>: 
@@ -457,6 +458,9 @@
                 <tr>
                   <td width="100%">
                     <ul>
+                      <li>
+                       <strong>Shengqiong Wu</strong>, Weicai Ye, Jiahao Wang, Quande Liu, Xintao Wang, Pengfei Wan, Di Zhang, Kun Gai, Shuicheng Yan, Hao Fei, Tat-Seng Chua.&nbsp&nbsp<em>Any2Caption: Interpreting Any Condition to Caption for Controllable Video Generation</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://sqwu.top/Any2Cap/">[Project]</a><a href="https://arxiv.org/abs/2503.24379">[pdf]</a>
+                      </li>
                       <li>
                         Hao Fei, Yuan Zhou, Juncheng Li, Xiangtai Li, Qingshan Xu, Bobo Li, <strong>Shengqiong Wu</strong>, Yaoting Wang, Junbao Zhou,et al.&nbsp&nbsp<em>On Path to Multimodal Generalist: General-Level and General-Bench</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://generalist.top/">[Project]</a><a href="https://arxiv.org/abs/2505.04620">[pdf]</a>
                       </li>
@@ -610,7 +614,7 @@
               </tr>
               <tr>
                 <td style="padding-left: 40px;" width="100%">
-                    NeurIPS-23/24, ICLR-24/25, ICML-24/25, CVPR-24/25, ACM MM-23/24, IJCAI-23/24, AAAI-24/25, ACL-23/24, WSDM-23, 
+                    NeurIPS-23/24, ICLR-24/25, ICML-24/25, CVPR-24/25, ACM MM-23/24/25, IJCAI-23/24, AAAI-24/25, ACL-23/24, WSDM-23, 
                   </td>
               </tr>
               <tr>
@@ -618,7 +622,7 @@
               </tr>
               <tr>
                 <td style="padding-left: 40px;" width="100%">
-                    TOMM, IEEE/ACM TALLIP, IPM, KBS, Neurocomputing
+                    ICJV, TOMM, IEEE/ACM TALLIP, IPM, KBS, Neurocomputing
                 </td>
               </tr>
               
