--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@
               <h2 class="title">About Me</h2>
             </div>
 
-            <p>I am currently a third-year Ph.D. student at <a href="https://www.nextcenter.org/">NExT++</a> Research Center, advised by Prof. <a href="https://www.chuatatseng.com/">Tat-Seng Chua</a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>, after I obtained my M.S. and Bachelor degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
+            <p>I am currently a fourth-year Ph.D. student at <a href="https://www.nextcenter.org/">NExT++</a> Research Center, advised by Prof. <a href="https://www.chuatatseng.com/">Tat-Seng Chua</a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Prior to this, I received both my M.S. and B.S. degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
             </p>
             <p>
-              My research revolves around <strong>Large Vision-Language Foundation Models</strong>, with a specific focus on <strong>advancement</strong>, <strong>controllabilitity</strong>, <strong>evaluability</strong>, <strong>reliable and robuts reasoning</strong>.
+              My research focuses on <strong>Large Vision-Language Foundation Models</strong>, with particular interest in advancing their <strong>capability</strong>, <strong>controllability</strong>, <strong>evaluability</strong>, and <strong>robust, reliable reasoning</strong>.
               Also, certain part of my intearest has been paid on Natural Language Processing.
             </p> 
             <p>I welcome collaboration opportunities. Feel free to reach out if you are interested in my research.</p>
@@ -327,7 +327,7 @@
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(255, 255, 255);">
               <tr>
                 <td width="30%">
-                  <video controls autoplay muted loop width="100%" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                  <video controls autoplay muted loop width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                     <source src="images/nextgpt.mp4" type="video/mp4">
                 </td>
                 <td width="70%">
@@ -342,7 +342,7 @@
               </tr> 
               <tr>  
                 <td width="30%">
-                    <video controls autoplay muted loop width="100%" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                    <video controls autoplay muted loop width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                       <source src="images/any2caption.mp4" type="video/mp4">
                 </td>
                 <td width="70%">
@@ -355,7 +355,7 @@
               </tr>
               <tr> 
                 <td width="30%">
-                  <img src="images/setok.jpeg" width="100%" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                  <img src="images/setok.jpeg" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                 </td>
                 <td width="70%">
                   <a href="https://sqwu.top/SeTok-web/"><b>Setok</b></a>:
@@ -366,7 +366,7 @@
               </tr>
               <tr> 
                 <td width="30%">
-                  <img src="images/usg.png" width="100%" height="100%" style="display: block; margin-left: auto; margin-right: auto;">
+                  <img src="images/usg.png" width="100%" style="display: block; margin-left: auto; margin-right: auto;">
                 </td>
                 <td width="70%">
                   <a href="https://sqwu.top/USG/"><b>USG</b></a>: 
