--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             </p>
             <p>
               My research focuses on <strong>Large Vision-Language Foundation Models</strong>, with particular interest in advancing their <strong>capability</strong>, <strong>controllability</strong>, <strong>evaluability</strong>, and <strong>robust, reliable reasoning</strong>.
-              Also, certain part of my intearest has been paid on Natural Language Processing.
+              I am also broadly interested in natural language processing.
             </p> 
             <p>I welcome collaboration opportunities. Feel free to reach out if you are interested in my research.</p>
             
