--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@
               <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(247, 248, 249);">
                 <tr>
                   <td width="100%" valign="middle">
+                    <li> <span style="color: red;">[NEW!-2025/05]</span>  🚀📣 Excited to announce that we're organizing the 1st MUCG Workshop: <a href="https://mllm-mucg.github.io/MM2025/">MLLM for Unified Comprehension and Generation</a> at ACM MM 2025! ✨ Top teams will be awarded certificates + cash prizes! </li>
                     <li> <span style="color: red;">[NEW!-2025/05]</span> 🥳 ICML'25 Spotlight paper: <a href="https://generalist.top/"> Path to Multimodal Generalist: General-Level and General-Bench </a>. <b>A New Evaluation Paradigm</b> for multimodal generalists. </li>
                     <li> <span style="color: red;">[NEW!-2025/03]</span> We release the first survey on <a href="https://github.com/yaotingwangofficial/Awesome-MCoT">MM-CoT</a> reasoning, welcom to participate and star✨✨. </li>
                     <li> <span style="color: red;">[NEW!-2025/03]</span> 🐾 I will be a <em>volunteer</em> at ICLR 2025. One paper (<a href="https://sqwu.top/SeTok-web/">Setok</a>) is accpted by ICLR-25. Looking forward to meet you. </li>
