--- a/index.html
+++ b/index.html
@@ -412,7 +412,9 @@
               <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(247, 248, 249);">
                 <tr>
                   <td width="100%" valign="middle">
-                    <li> <span style="color: red;">[NEW!-2025/05]</span>  🚀📣 Excited to announce that we're organizing the 1st MUCG Workshop: <a href="https://mllm-mucg.github.io/MM2025/">MLLM for Unified Comprehension and Generation</a> at ACM MM 2025! ✨ Top teams will be awarded certificates + cash prizes! </li>
+                    <li> <span style="color: red;">[NEW!-2025/06]</span> 🚀 Just launched an <a href="https://github.com/ChocoWu/Awesome-Scene-Graph-Generation">open discussions</a> on the future of <b>scene graphs</b> and <b>scene understanding</b>. Let us know what you think in the discussion thread! </li>
+                    <li> <span style="color: red;">[NEW!-2025/06]</span> 📣 We host a <b>grand Challenge</b> in <a href="https://mllm-mucg.github.io/MM2025/">MUCG Workshop</a>, welcome to partcipate. ✨ Top teams will be awarded certificates + cash prizes! </li>
+                    <li> <span style="color: red;">[NEW!-2025/05]</span>  🚀📣 Excited to announce that we're organizing the 1st MUCG Workshop: <a href="https://mllm-mucg.github.io/MM2025/">MLLM for Unified Comprehension and Generation</a> at ACM MM 2025! </li>
                     <li> <span style="color: red;">[NEW!-2025/05]</span> 🥳 ICML'25 Spotlight paper: <a href="https://generalist.top/"> Path to Multimodal Generalist: General-Level and General-Bench </a>. <b>A New Evaluation Paradigm</b> for multimodal generalists. </li>
                     <li> <span style="color: red;">[NEW!-2025/03]</span> We release the first survey on <a href="https://github.com/yaotingwangofficial/Awesome-MCoT">MM-CoT</a> reasoning, welcom to participate and star✨✨. </li>
                     <li> <span style="color: red;">[NEW!-2025/03]</span> 🐾 I will be a <em>volunteer</em> at ICLR 2025. One paper (<a href="https://sqwu.top/SeTok-web/">Setok</a>) is accpted by ICLR-25. Looking forward to meet you. </li>
@@ -615,7 +617,7 @@
               </tr>
               <tr>
                 <td style="padding-left: 40px;" width="100%">
-                    NeurIPS-23/24, ICLR-24/25, ICML-24/25, CVPR-24/25, ACM MM-23/24/25, IJCAI-23/24, AAAI-24/25, ACL-23/24, WSDM-23, 
+                    NeurIPS-23/24/25, ICLR-24/25, ICML-24/25, CVPR-24/25, ACM MM-23/24/25/26, IJCAI-23/24, AAAI-24/25, ACL-23/24, WSDM-23, 
                   </td>
               </tr>
               <tr>
