--- a/index.html
+++ b/index.html
@@ -412,7 +412,8 @@
               <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(247, 248, 249);">
                 <tr>
                   <td width="100%" valign="middle">
-                    <li><span style="color: red;">[NEW!-2025/10]</span>🥳🥳🥳 I'm co-organizing the Workshop on <a href="https://scene-graph.github.io/SG4SI-WACV26/">Scene Graph on Structured Intelligence</a> at WACV 2026. Welcome Submissions!🤓</li>
+                    <li><span style="color: red;">[NEW!-2025/11]</span>🚀 We develop a <a href="https://univa.online/">Universal Video Agent</a> towards Open-Source Next-Generation Video Generalist</li>
+                    <li><span style="color: red;">[NEW!-2025/10]</span>🥳🥳🥳 I'm co-organizing the Workshop on <a href="https://scene-graph.github.io/SG4SI-WACV26/">Scene Graph on Structured Intelligence</a> at WACV 2026. Welcome Submissions and Presentations!🤓</li>
                     <li> <span style="color: red;">[NEW!-2025/06]</span> 🚀 Just launched an <a href="https://github.com/ChocoWu/Awesome-Scene-Graph-Generation">open discussions</a> on the future of <b>scene graphs</b> and <b>scene understanding</b>. Let us know what you think in the discussion thread! </li>
                     <li> <span style="color: red;">[NEW!-2025/06]</span> 📣 We host a <b>grand Challenge</b> in <a href="https://mllm-mucg.github.io/MM2025/">MUCG Workshop</a>, welcome to partcipate. ✨ Top teams will be awarded certificates + cash prizes! </li>
                     <li> <span style="color: red;">[NEW!-2025/05]</span>  🚀📣 Excited to announce that we're organizing the 1st MUCG Workshop: <a href="https://mllm-mucg.github.io/MM2025/">MLLM for Unified Comprehension and Generation</a> at ACM MM 2025! </li>
@@ -462,6 +463,12 @@
                 <tr>
                   <td width="100%">
                     <ul>
+                      <li>
+                       <strong>Shengqiong Wu</strong>, Weicai Ye, Yuanxing Zhang, Jiahao Wang, Quande Liu, Xintao Wang, Pengfei Wan, Kun Gai, Hao Fei, Tat-Seng Chua.&nbsp&nbsp<em>A Reason-then-Describe Instruction Interpreter for Controllable Video Generation</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://sqwu.top/ReaDe/">[Project]</a><a href="https://arxiv.org/abs/2511.20563">[pdf]</a>
+                      </li>
+                      <li>
+                       Zhengyang Liang, Daoan Zhang, Huichi Zhou, Rui Huang, Bobo Li, Yuechen Zhang, <strong>Shengqiong Wu</strong>, Xiaohan Wang, Jiebo Luo, Lizi Liao, Hao Fei.&nbsp&nbsp<em>UniVA: Universal Video Agent towards Open-Source Next-Generation Video Generalist</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://univa.online/">[Project]</a><a href="https://arxiv.org/abs/2511.08521">[pdf]</a>
+                      </li>
                       <li>
                        <strong>Shengqiong Wu</strong>, Weicai Ye, Jiahao Wang, Quande Liu, Xintao Wang, Pengfei Wan, Di Zhang, Kun Gai, Shuicheng Yan, Hao Fei, Tat-Seng Chua.&nbsp&nbsp<em>Any2Caption: Interpreting Any Condition to Caption for Controllable Video Generation</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://sqwu.top/Any2Cap/">[Project]</a><a href="https://arxiv.org/abs/2503.24379">[pdf]</a>
                       </li>
