--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
               </tr>
               <tr>
                 <td style="padding-left: 40px;" width="100%">
-                    NeurIPS-23/24/25, ICLR-24/25, ICML-24/25, CVPR-24/25, ACM MM-23/24/25/26, IJCAI-23/24, AAAI-24/25, ACL-23/24, WSDM-23, 
+                    NeurIPS-23/24/25, ICLR-24/25, ICML-24/25, CVPR-24/25/26, ACM MM-23/24/25, IJCAI-23/24, AAAI-24/25/26, ACL-23/24, WSDM-23, 
                   </td>
               </tr>
               <tr>
